Fix unreadable text on findbar w/ dark themes (#383, #37)

--- a/theme/shared/global/findBar.css
+++ b/theme/shared/global/findBar.css
@@ -6,11 +6,11 @@
 
 findbar {
   -moz-appearance: none;
-  background: linear-gradient(to bottom, #d4d4d4, #ececec);
-  padding: 4px 8px;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.08), rgba(0,0,0,0.08));
   border-top: 2px solid;
   -moz-border-top-colors: ThreeDShadow ThreeDHighlight;
   min-width: 1px;
+  padding: 4px 8px;
   transition-property: margin-bottom, opacity, visibility;
   transition-duration: 150ms, 150ms, 0s;
   transition-timing-function: ease-in-out, ease-in-out, linear;
@@ -82,10 +82,8 @@ findbar toolbarbutton[disabled="true"]:active:hover {
 .findbar-textbox {
   -moz-appearance: none;
   border: 1px solid rgba(50,50,50,.4);
-  background-image: linear-gradient(to bottom, #f2f2f2, #fdfdfd);
-  box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.15),
-                    0px 1px 0 0 rgba(255,255,255,0.89);
-  color: rgba(0,0,0,0.9);
+  border-color: rgba(30,30,30,.4);
+  box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.15), 0px 1px 0 0 rgba(255,255,255,0.1);
   margin: 0;
   padding: 3px;
   width: 14em;
@@ -103,8 +101,6 @@ findbar toolbarbutton[disabled="true"]:active:hover {
 
 .findbar-textbox[focused="true"] {
   border-color: Highlight;
-  box-shadow: 0 1px 0 rgba(255,255,255,0.6),
-              inset 0 1px 2px 0 rgba(0,106,221,0.3);
 }
 
 .findbar-textbox[status="notfound"] {
